# StockDataView

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd.yml
.streamlit/: config.toml
src/: app.py  config.py  config.yml  data_validation.py  main.py  stock_models.py  utils.py
src/api/: fmp_client.py
src/services/: stock_analysis.py
src/stock_valuation_app/: __init__.py  config.yml  main.py  utils.py
src/stock_valuation_app/api/: fmp_client.py  routes.py
src/stock_valuation_app/data/: fmp_client.py
src/stock_valuation_app/models/: stock.py  stock_models.py
src/stock_valuation_app/services/: stock_analysis.py  valuation.py
src/stock_valuation_app/ui/: app.py  dashboard.py  style.html
src/stock_valuation_app/utils/: utils.py
src/ui/: app.py
tests/: test_data_validation.py  test_stock_models.py  test_utils.py
