[project]
name = "stock-valuation-app"
version = "0.1.0"
description = "A single-page web app displaying stock data, growth charts, and valuation insights."
readme = "README.md"
authors = [
    { name = "Dimeji Salau", email = "dimejisalau@protonmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "asyncio>=3.4.3",
    "duckdb>=1.1.3",
    "httpx>=0.27.2",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]