[project]
name = "stockdataview"
version = "0.1.0"
description = "A containerized application for visualizing stock fundamentals, ratings, and historical data using the Financial Modeling Prep (FMP) API."
readme = "README.md"
authors = [
    { name = "Dimeji Salau", email = "dimejisalau@protonmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.27.2",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]